[gd_scene load_steps=3 format=3 uid="uid://c5xfk8yq3m7pl"]

[ext_resource type="Script" path="res://scripts/enemy/boss.gd" id="1_boss"]

[sub_resource type="CircleShape2D" id="CircleShape2D_body"]
radius = 24.0

[node name="Boss" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_boss")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_body")

[node name="AttackArea2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="AttackTimer" type="Timer" parent="."]

[node name="HitFlashTimer" type="Timer" parent="."]
